# Order_System

./: .gitignore  .linear_project.json  Makefile  README.md  app_spec.txt  init.sh  package.json
backend/: .env.example  Makefile  README.md  init_db.py  pyproject.toml  requirements.txt  seed_products.py  test_checkout.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rbac.py  schemas.py
backend/app/routes/: auth.py  cart.py  config.py  orders.py  products.py  returns.py  users.py
backend/app/services/: inventory.py  tax.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_main.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  orders.ts  products.ts  returns.ts
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/POS/: CartSummary.tsx  CheckoutModal.tsx  ProductSearch.tsx  Receipt.tsx
frontend/src/pages/: DashboardPage.tsx  InventoryPage.tsx  LoginPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  POSPage.tsx  ReceiptPage.tsx  ReturnsPage.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts  cartStore.ts
frontend/src/types/: index.ts
screenshots/: CLA-45-api-test-output.txt  CLA-45-implementation-summary.txt  CLA-45-manual-test-guide.txt  CLA-45-test-report.txt  IMPLEMENTATION_SUMMARY.txt
